# solidity-bindgen

./: Cargo.toml
solidity-bindgen/: Cargo.toml
solidity-bindgen-macros/: Cargo.toml
solidity-bindgen-macros/src/: abi_gen.rs  abi_json.rs  lib.rs
solidity-bindgen/src/: context.rs  internal.rs  lib.rs  providers.rs  secrets.rs  web3_provider.rs
solidity-bindgen/src/internal/: mod.rs  types.rs
